modified bits of spacing

--- a/sass/_board.scss
+++ b/sass/_board.scss
@@ -1,8 +1,8 @@
 .board {
   border: 2px solid hsl(217, 16%, 45%);
   border-radius: 1rem;
-  padding: .5rem 3rem;
-  margin: 0 2rem 0 2rem;
+  padding: 1rem 3rem;
+  margin: 0 2rem 4rem 2rem;
 
   display: flex;
   justify-content: space-around;
